--- a/glow-server/package.json
+++ b/glow-server/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.11.0",
     "child_process": "^1.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
