--- a/glow-server/package.json
+++ b/glow-server/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -34,10 +35,13 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.2.0",
+    "cache-manager-redis-yet": "^5.1.5",
     "child_process": "^1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "faiss-node": "^0.5.1",
+    "ioredis": "^5.7.0",
     "openai": "^5.19.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
