--- a/glow-client/package.json
+++ b/glow-client/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "axios": "^1.11.0",
     "expo": "~54.0.1",
     "expo-asset": "^12.0.8",
     "expo-font": "^14.0.7",
