--- a/glow-client/package.json
+++ b/glow-client/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1"
+    "react-native-svg": "15.12.1",
+    "expo-secure-store": "~15.0.6"
   },
   "private": true
 }
