--- a/glow-client/package.json
+++ b/glow-client/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "axios": "^1.11.0",
+    "babel-preset-expo": "^54.0.1",
     "expo": "~54.0.1",
     "expo-asset": "^12.0.8",
     "expo-font": "^14.0.7",
@@ -23,9 +24,11 @@
     "expo-status-bar": "~3.0.7",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1"
+    "react-native-svg": "15.12.1",
+    "react-native-toast-message": "^2.3.3"
   },
   "private": true
 }
