--- a/glow-client/package.json
+++ b/glow-client/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "babel-preset-expo": "^54.0.1",
     "expo": "~54.0.1",
@@ -28,7 +29,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-toast-message": "^2.3.3"
+    "react-native-toast-message": "^2.3.3",
+    "react-redux": "^9.2.0"
   },
   "private": true
 }
