--- a/glow-client/package.json
+++ b/glow-client/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.1",
     "expo-asset": "^12.0.8",
     "expo-font": "^14.0.7",
+    "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-modules-core": "^3.0.15",
     "expo-secure-store": "~15.0.6",
